Added an add student page and button. Added functionality to create class and add students pages.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,28 @@
 
             <h1 id = "header">School Attendance System</h1>
 
-            <div id = "main">
-                <a href="createClass.html" target="_blank">
-                    <button id ="createClass-btn">Create Class<i class="fas fa-plus"></i></button>
-                </a>
+            <div id = "set1">
+                    <a href="createClass.html" target="_blank">
+                        <button id ="createClass-btn">Create Class<i class="fas fa-plus"></i></button>
+                    </a>
+                    <a href="" target="_blank">
+                        <button id ="classes">Classes<br><i class="fas fa-book"></i></button>
+                    </a>
+                    <a href="" target="_blank">
+                        <button id="teachers">Teachers<br><i class="fas fa-users"></i></button>
+                    </a>
+            </div>
+            
+            <div id ="set2">
+                    <a href="addStudents.html" target="_blank">
+                        <button id="students">Add Students<br><i class="fas fa-plus"></i></button>
+                    </a>
+                    <a href="" target="_blank">
+                        <button id="attendance">Take Attendance<br><i class="fas fa-address-book"></i></button>
+                    </a>
+                    <a href="" target="_blank">
+                        <button id="students">Students<br><i class="fas fa-users"></i></button>
+                    </a>
             </div>
 
             <div id="footer">
