added navigation menus to all the pages

--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,23 @@
             <script src="https://kit.fontawesome.com/57a72e588d.js" crossorigin="anonymous"></script>
         </head>
         <body>
-
-            <h1 id = "header">School Attendance System</h1>
+            <div id = "horizontalMenu">
+                <a class = "links" href = "classes.html" target = "_blank">Classes<i class="fas fa-book"></i></a>
+                <a class = "links" href = "createClass.html" target = "_blank">Create Class<i class="fas fa-plus"></i></a>
+                <a class = "links" href = "students.html" target = "_blank">Students<i class="fas fa-users"></i></a>
+                <a class = "links" href = "addStudents.html" target = "_blank">Add Students<i class="fas fa-plus"></i></a>
+                <a class = "links" href = "teachers.html" target = "_blank">Teachers<i class="fas fa-users"></i></a>
+                <a class = "links" href = "attendance.html" target = "_blank">Take Attendance<i class="fas fa-address-book"></i></a>
+            </div><br><br>
 
             <div id = "set1">
                     <a href="createClass.html" target="_blank">
                         <button id ="createClass-btn">Create Class<i class="fas fa-plus"></i></button>
                     </a>
-                    <a href="" target="_blank">
+                    <a href="classes.html" target="_blank">
                         <button id ="classes">Classes<br><i class="fas fa-book"></i></button>
                     </a>
-                    <a href="" target="_blank">
+                    <a href="teachers.html" target="_blank">
                         <button id="teachers">Teachers<br><i class="fas fa-users"></i></button>
                     </a>
             </div>
@@ -24,10 +30,10 @@
                     <a href="addStudents.html" target="_blank">
                         <button id="students">Add Students<br><i class="fas fa-plus"></i></button>
                     </a>
-                    <a href="" target="_blank">
+                    <a href="attendance.html" target="_blank">
                         <button id="attendance">Take Attendance<br><i class="fas fa-address-book"></i></button>
                     </a>
-                    <a href="" target="_blank">
+                    <a href="students.html" target="_blank">
                         <button id="students">Students<br><i class="fas fa-users"></i></button>
                     </a>
             </div>
