--- a/public/addStudents.html
+++ b/public/addStudents.html
@@ -4,7 +4,14 @@
         <script src="https://kit.fontawesome.com/57a72e588d.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        
+        <div id = "horizontalMenu">
+            <a class = "links" href = "index.html">Home<i class = "fas fa-home"></i></a>
+            <a class = "links" href = "classes.html">Classes<i class="fas fa-book"></i></a>
+            <a class = "links" href = "createClass.html">Create Class<i class="fas fa-plus"></i></a>
+            <a class = "links" href = "students.html">Students<i class="fas fa-users"></i></a>
+            <a class = "links" href = "teachers.html">Teachers<i class="fas fa-users"></i></a>
+            <a class = "links" href = "attendance.html">Take Attendance<i class="fas fa-address-book"></i></a>
+        </div><br><br>
         <form id="studentCreation" name ="studentCreation" action ="/addStudents" method="post">
             <legend id = "legend">Add Student</legend><br>
             <label for = "studentID">Student ID:</label>
