--- a/public/createClass.html
+++ b/public/createClass.html
@@ -6,6 +6,15 @@
         </head>
         <body>
 
+            <div id = "horizontalMenu">
+                <a class = "links" href = "index.html">Home<i class="fas fa-home"></i></a>
+                <a class = "links" href = "classes.html">Classes<i class="fas fa-book"></i></a>
+                <a class = "links" href = "students.html">Students<i class="fas fa-users"></i></a>
+                <a class = "links" href = "addStudents.html">Add Students<i class="fas fa-plus"></i></a>
+                <a class = "links" href = "teachers.html">Teachers<i class="fas fa-users"></i></a>
+                <a class = "links" href = "attendance.html">Take Attendance<i class="fas fa-address-book"></i></a>
+            </div><br><br>
+
                 <form id="classCreation" name ="classCreation" action ="/createClass" method="post">
                     <legend id="legend">Create Class</legend><br>
                     <label for="classID">Class ID:</label>
