Added icons to the navigation bars.

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
     <html>
+
         <head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel ="stylesheet" href="index.css">
             <script src="https://kit.fontawesome.com/57a72e588d.js" crossorigin="anonymous"></script>
         </head>
@@ -28,13 +32,13 @@
             
             <div id ="set2">
                     <a href="addStudents.html" target="_blank">
-                        <button id="students">Add Students<br><i class="fas fa-plus"></i></button>
+                        <button id = "addStudents">Add Students<i class="fas fa-plus"></i></button>
                     </a>
                     <a href="attendance.html" target="_blank">
-                        <button id="attendance">Take Attendance<br><i class="fas fa-address-book"></i></button>
+                        <button id="attendance">Take Attendance<i class="fas fa-address-book"></i></button>
                     </a>
                     <a href="students.html" target="_blank">
-                        <button id="students">Students<br><i class="fas fa-users"></i></button>
+                        <button id="students">Students<i class="fas fa-users"></i></button>
                     </a>
             </div>
 
@@ -45,8 +49,5 @@
             </div>
 
         </body>
-
         <script src ="index.js">
-        </script>
-        
-    </html>
+    </script></html>
