--- a/public/classes.html
+++ b/public/classes.html
@@ -22,3 +22,13 @@
 
 
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
