--- a/public/createClass.html
+++ b/public/createClass.html
@@ -18,9 +18,9 @@
                 <form id="classCreation" name ="classCreation" action ="/createClass" method="post">
                     <legend id="legend">Create Class</legend><br>
                     <label for="classID">Class ID:</label>
-                    <input type ="text" name = "classID" placeholder = "Enter class ID" required><br><br>
+                    <input id = "classID" type ="text" name = "classID" placeholder = "Enter class ID" required><br><br>
                     <label for = "teacher">Teacher:</label>
-                    <input type = "text" name = "teacher" placeholder = "Enter teacher name" required><br><br>
+                    <input id = "teacher" type = "text" name = "teacher" placeholder = "Enter teacher name" required><br><br>
                     <input class = "button" type = "Submit" value="Create Class"/>
                 </form><br><br>
                 <p id = "notification"></p>
